[package]
name = "zkpw"
version = "0.1.0"
edition = "2021"

[dependencies]
zk_rust_io = { git = "https://github.com/yetanotherco/zkRust.git" }
aes = "0.8.4"
hex = "0.4"
sha3 = "0.10"
k256 = "0.13.4"         # Ethereum private key işlemleri için 
secp256k1 = { version = "0.30.0", features = ["rand"] }